[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-memory"
version = "0.1.0"
description = "Hybrid search memory for AI agents — SQLite FTS5 + Ollama vector embeddings"
readme = "SKILL.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Alex Chen", email = "alex.chen31337@gmail.com"}]
keywords = ["memory", "search", "fts5", "embeddings", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/clawinfra/hybrid-memory"
Repository = "https://github.com/clawinfra/hybrid-memory"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "build"]
